<resources>
    <string name="app_name">EosWallet</string>
    <string name="loading">加载中&#8230;</string>
    <string name="load_error">加载出错</string>
    <string name="no_network">没有网络，点击重试</string>
    <string name="no_data">没有数据</string>
    <string name="str_plus">+%s</string>
    <string name="str_del">-%s</string>
    <string name="update_cancel">取消</string>
    <string name="updating">正在更新，请稍等......</string>
    <string name="down_loading">正在下载请稍后</string>
    <string name="refresh_completed">刷新完成</string>
    <string name="update">立即更新</string>
    <string name="know">知道了</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="delete_success">删除成功</string>
    <string name="desc">查看</string>
    <string name="determine">确定</string>
    <string name="submit">提交</string>
    <string name="friend_create_account">请好友创建</string>
    <string name="create_for_friends">帮好友创建</string>
    <string name="scan_code">扫描二维码</string>
    <string name="location_qr_code">本地二维码</string>
    <string name="qr_code_collection">二维码收款</string>
    <string name="qr_code_save">客服二维码已保存至系统相册</string>
    <string name="account_private_key">账户私钥：</string>
    <string name="account_public_key">账户公钥：</string>
    <string name="account_name">账户名称：</string>
    <string name="save_qr_code">保存二维码</string>
    <string name="friend_create_account_tip">让您的好友前往“钱包右上角>帮好友创建”扫码进行\n朋友已创建？</string>
    <string name="click_refresh">点击刷新</string>
    <string name="total_staked">得票：</string>
    <string name="vote_ranking">排名：</string>
    <string name="voteage_update_height">出块：</string>
    <string name="check_update">发现新版本</string>
    <string name="update_download">下载更新</string>
    <string name="request_permission_prompt">请求权限</string>
    <string name="to_update_you_need_to_use">下载更新包需要同意文件读写权限</string>
    <string name="propose_signed">已签名</string>
    <string name="propose_un_signed">未签名</string>
    <string name="config_weights">配置权重</string>
    <string name="permission_configuration">权限配置</string>
    <string name="permission_configuration_fail">权限配置失败</string>
    <string name="permission_configuration_fee">手续费 0.1 BXC</string>
    <string name="configurator">配置人</string>
    <string name="see_weights">查看权重</string>
    <string name="count_weights">总权重：</string>
    <string name="weights_details">权重详情</string>
    <string name="address">地址</string>
    <string name="add_weight">添加权重</string>
    <string name="add_success">添加成功</string>
    <string name="weight_account_empty">权重账号不能为空</string>
    <string name="account_not_exist">账号不存在，请重新输入</string>
    <string name="setting_success">设置成功</string>
    <string name="setting_fail">设置失败</string>
    <string name="setting">正在设置</string>
    <string name="no_permission_to_execute">无执行权限</string>
    <string name="account">账户：</string>
    <string name="weights">权重：</string>
    <string name="welcome_tips">Hi，欢迎来到BXC钱包</string>
    <string name="no_account_tips">你的账号暂无钱包信息，请创建或导入钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="friend_created">好友已创建</string>
    <string name="copy_account_pri_key_success">账户私钥复制成功</string>
    <string name="copy_account_pub_key_success">账户公钥复制成功</string>
    <string name="saved_system_album">已保存至系统相册</string>
    <string name="account_not_created_successfully">账户未创建成功</string>
    <string name="check_network_connection">请检查网络连接</string>
    <string name="create_success">创建成功</string>
    <string name="creating">创建中</string>
    <string name="create_fail">创建失败</string>
    <string name="account_information">账户信息</string>
    <string name="create_account_tips">账户名称（链上返回）</string>
    <string name="set_wallet_password">设置钱包密码</string>
    <string name="wallet_password">钱包密码</string>
    <string name="repeat_wallet_password">重复密码</string>
    <string name="click_input">点击输入</string>
    <string name="set_wallet_password_tips">设置密码后不可修改</string>
    <string name="set_wallet_password_hint">请设置6位数字的钱包密码</string>
    <string name="input_commit">请再次输入</string>
    <string name="complete">完成</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="commit_password_not_empty">确认密码不能为空</string>
    <string name="please_enter_six_digit_password">请输入6位数字密码</string>
    <string name="please_enter_six_digit_commit_password">请输入6位数字确认密码</string>
    <string name="two_password_inputs_are_inconsistent">两次密码输入不一致</string>
    <string name="click_again_exit">再次点击退出</string>
    <string name="import_pri_key">导入私钥</string>
    <string name="import_pri_key_hint">输入或粘贴私钥</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="pri_key_empty">请输入私钥！</string>
    <string name="pri_key_error">请输入正确的私钥！</string>
    <string name="my_memory">我的内存：</string>
    <string name="transaction_empty">你目前还没有交易记录</string>
    <string name="surplus">剩余 </string>
    <string name="phone_number">手机号码</string>
    <string name="wallet_address">钱包地址</string>
    <string name="backup_private_key">备份私钥</string>
    <string name="see_public_key">查看公钥</string>
    <string name="wallet_faq">钱包FAQ</string>
    <string name="bxc_wallet_faq">BXC钱包FAQ</string>
    <string name="about_us">关于我们</string>
    <string name="check_updates">检查更新</string>
    <string name="password_error">密码错误</string>
    <string name="pri_key">私钥</string>
    <string name="account_public_key_tips">账户公钥</string>
    <string name="pub_key">公钥</string>
    <string name="current_version">当前版本V</string>
    <string name="new_version_detected">，检查到新版本V</string>
    <string name="update_latest_version">，是否更新为最新版本</string>
    <string name="is_latest_version">,已是最新版本</string>
    <string name="app_data_empty">暂无应用数据</string>
    <string name="node_vote">节点投票</string>
    <string name="super_node">超级节点：</string>
    <string name="candidate_node">候选节点</string>
    <string name="my_voted">我的投票</string>
    <string name="circular_signature_transfer">环签转账</string>
    <string name="all_app">全部应用</string>
    <string name="please_enter_web_address">请输入网址</string>
    <string name="help_create">帮他创建</string>
    <string name="my_account">我的账户</string>
    <string name="account_creation_fee">需支付：1.0000 BXC</string>
    <string name="copy_account">复制账户</string>
    <string name="bxc_account_qr">BXC账户二维码</string>
    <string name="copy_wallet_address_success">复制成功！  钱包地址：</string>
    <string name="bxc_wallet_tips">BXC是一款移动端轻钱包APP，它旨在为普通用户\n提供一款安全、放心好用、功能强大的\n数字资产钱包应用。</string>
    <string name="Number_node_voting_bounds">超级节点投票(</string>
    <string name="session">届)</string>
    <string name="thawable">可解冻</string>
    <string name="unblocked_assets">解冻资产</string>
    <string name="unfreezing_amount">可解冻金额：</string>
    <string name="hour_thawable">小时后可解冻</string>
    <string name="node_empty">暂无节点</string>
    <string name="my_vote_empty">赶紧去投票吧！</string>
    <string name="proportional_dividend">分红比例</string>
    <string name="prize_pool_amount">奖池金额</string>
    <string name="voted">已投</string>
    <string name="vote">投票</string>
    <string name="modify_vote">修改投票</string>
    <string name="modify_node_vote">修改节点投票</string>
    <string name="modify_vote_number">修改后投票金额：</string>
    <string name="redeem_vote">赎回投票</string>
    <string name="vote_number_hint">请输入整数投票金额</string>
    <string name="vote_number_zero">投票数不能为0</string>
    <string name="enter_vote_number">请输入投票金额</string>
    <string name="vote_fee">投票立即生效，手续费 0.05 BXC</string>
    <string name="current_voting_amount">当前投票金额：</string>
    <string name="available_voting_amount">可用投票金额：</string>
    <string name="bonus">分红</string>
    <string name="receive_bonus">领取分红</string>
    <string name="message_notification">消息通知</string>
    <string name="message_details">消息详情</string>
    <string name="message_empty">暂无更多消息</string>
    <string name="enter_query_ring_sing_account">请输入环签账号</string>
    <string name="care_proposals">我关注的提案</string>
    <string name="care_ring_sing_account_empty">暂无关注环签账号</string>
    <string name="ring_sing_account_error">请输入正确的环签账号</string>
    <string name="care_proposals_empty">暂无关注提案</string>
    <string name="query_proposals">查询提案</string>
    <string name="proposer">提案者</string>
    <string name="proposer_empty">请输入提案者</string>
    <string name="proposal_name">提案名称</string>
    <string name="proposal_name_empty">请输入提案名称</string>
    <string name="please_enter">请输入</string>
    <string name="query">查询</string>
    <string name="please_config_weights">请配置权重</string>
    <string name="initiate_proposal">发起提案</string>
    <string name="see_details">查看详情</string>
    <string name="account_more">最多只能添加5个账号</string>
    <string name="account_less">权重账号不能少于2个</string>
    <string name="delete">删除</string>
    <string name="balance_insufficient">余额不足</string>
    <string name="extractable_balance">可提取金额：</string>
    <string name="fee_cost">手续费：</string>
    <string name="care">关注</string>
    <string name="care_success">关注成功</string>
    <string name="please_wait">,请稍后......</string>
    <string name="switch_english">切换英文</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string name="swithc_language">正在切换语言</string>
    <string name="new_address">新建地址</string>
    <string name="founder">创建人</string>
    <string name="balance">余额</string>
    <string name="create_ring_sign_account_fee">手续费 1 BXC</string>
    <string name="create_ring_sign_account_rule">请输入7位，包含a-z,1-5</string>
    <string name="establish">创建</string>
    <string name="propose_details_empty">未查询到该提案</string>
    <string name="querying">查询中</string>
    <string name="drawee">付款人</string>
    <string name="payee">收款人</string>
    <string name="amount_money">金额</string>
    <string name="remarks">备注</string>
    <string name="expiration_time">过期时间</string>
    <string name="propose_details">提案详情</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="execute">执行</string>
    <string name="concerned">已关注</string>
    <string name="cancel_proposal_insufficient_authority">非提案人无取消权限</string>
    <string name="execute_authorization_insufficient">未满足授权，无法执行</string>
    <string name="submitting">正在提交</string>
    <string name="fail">失败</string>
    <string name="success">成功</string>
    <string name="please_enter_wallet_password_hint">请输入钱包密码</string>
    <string name="no_more_app">更多应用，敬请期待</string>
    <string name="application">应用</string>
    <string name="wallet">钱包</string>
    <string name="my">我的</string>
    <string name="cash_in">兑入</string>
    <string name="transfer_accounts">转账</string>
    <string name="available_balance">可用余额：</string>
    <string name="total_number_votes">投票总额</string>
    <string name="total_redemption">赎回总额</string>
    <string name="dividends_to_be_collected">待领分红</string>
    <string name="transaction_records">交易记录</string>
    <string name="exchange">兑换</string>
    <string name="recharge_currency">充币</string>
    <string name="select_currency">选择需兑换的币种</string>
    <string name="exchange_rate">汇率</string>
    <string name="back">返回</string>
    <string name="withdrawal_address">提现地址 (ETH地址)</string>
    <string name="withdrawal_quantity">提现数量</string>
    <string name="remarks_optional">备注（选填）</string>
    <string name="usdt_fee">矿工手续费约3 USDT,以公链实际收取为准</string>
    <string name="application_for_withdrawal">申请提现</string>
    <string name="enter_eth_account_hint">请输入提现ETH账户</string>
    <string name="withdrawal_quantity_hint">请输入提现额度,只能为整数！</string>
    <string name="withdrawal_submitted_successfully">提现申请提交成功</string>
    <string name="transaction_fail">交易失败</string>
    <string name="address_is_empty">地址为空</string>
    <string name="recharge">充值</string>
    <string name="type">类型：</string>
    <string name="collection_account">收款账户</string>
    <string name="collection_account_empty">请输入收款账户！</string>
    <string name="transaction_quantity">转账数量</string>
</resources>