<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data >
        <variable
            name="viewModel"
            type="com.landis.eoswallet.ui.account.viewmodel.CreateAccountForFriendsViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_custom_capture_back"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_aty_back"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_for_friends" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_grey_radius_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:text="@string/account_public_key"
                android:layout_height="wrap_content"/>
            <TextView
                android:onClick="@{viewModel::copyPubKey}"
                android:padding="4dp"
                android:id="@+id/tv_public_key_copy"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_blue"
                android:text="@string/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@{viewModel.pubKey}"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_public_key_copy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_grey_radius_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:text="@string/account_name"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@{viewModel.randomAccount}"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:text="@string/account_creation_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:stateListAnimator="@null"
            android:id="@+id/btn_create_for_friend"
            android:textColor="@color/white"
            android:text="@string/help_create"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shape_button_bg_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>