<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.landis.eoswallet.ui.wallet.viewmodel.WalletViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/appbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerInside"
                android:src="@mipmap/icon_aty_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/set_wallet_password"
                android:textColor="#1C2D41"
                android:textSize="16dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar1"
            android:background="#F6F6F6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#F6F6F6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/create_account_tips"
                android:textColor="#ff8392a5"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:text="@{viewModel.accountName}"
                android:textColor="#3F3F3F"
                android:textSize="15dp" />

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="12dp"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:text="请设置6～20位字符的账户密码"-->
            <!--android:textColor="#ffea3550"-->
            <!--android:textSize="12sp"-->
            <!--/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#F6F6F6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/wallet_password"
                android:textColor="#ff8392a5"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/edit_key"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:hint="@string/set_wallet_password_hint"
                android:inputType="numberPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="#1C2D41"
                android:textColorHint="#8392A5"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#F6F6F6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/repeat_wallet_password"
                android:textColor="#ff8392a5"
                android:textSize="12dp" />


            <EditText
                android:id="@+id/edit_key_sure"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:hint="@string/click_input"
                android:inputType="numberPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="#1C2D41"
                android:textColorHint="#8392A5"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/btn_complete"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/shape_blue_bg_radius_44"
                android:clickable="true"
                android:elevation="1.5dp"
                android:gravity="center"
                android:text="@string/complete"
                android:textColor="#ffffff"
                android:textSize="15dp" />

        </LinearLayout>

    </RelativeLayout>
</layout>